[gd_scene load_steps=4 format=3 uid="uid://cyihnb1mpopmn"]

[ext_resource type="Script" path="res://script/shop_buy.gd" id="1_xdx3i"]
[ext_resource type="Texture2D" uid="uid://dtlwr4lcfmpl5" path="res://asset/GUI/gui_shop.png" id="2_gappa"]
[ext_resource type="AudioStream" uid="uid://b3rswav83e3an" path="res://sound/pickupCoin.wav" id="3_jkjjf"]

[node name="shop_buy" type="Node2D"]
script = ExtResource("1_xdx3i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(577, 326)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_gappa")

[node name="Button1_10" type="Button" parent="."]
offset_left = 306.0
offset_top = 164.0
offset_right = 423.0
offset_bottom = 270.0
flat = true

[node name="Button2" type="Button" parent="."]
offset_left = 304.0
offset_top = 305.0
offset_right = 426.0
offset_bottom = 422.0
flat = true

[node name="Button3" type="Button" parent="."]
offset_left = 308.0
offset_top = 444.0
offset_right = 423.0
offset_bottom = 559.0
flat = true

[node name="Button4" type="Button" parent="."]
offset_left = 443.0
offset_top = 160.0
offset_right = 559.0
offset_bottom = 270.0
flat = true

[node name="Button5" type="Button" parent="."]
offset_left = 448.0
offset_top = 305.0
offset_right = 565.0
offset_bottom = 414.0
flat = true

[node name="Button6" type="Button" parent="."]
offset_left = 442.0
offset_top = 441.0
offset_right = 561.0
offset_bottom = 554.0
flat = true

[node name="Button7" type="Button" parent="."]
offset_left = 581.0
offset_top = 163.0
offset_right = 699.0
offset_bottom = 271.0
flat = true

[node name="Button8" type="Button" parent="."]
offset_left = 583.0
offset_top = 308.0
offset_right = 698.0
offset_bottom = 411.0
flat = true

[node name="Button9" type="Button" parent="."]
offset_left = 576.0
offset_top = 443.0
offset_right = 700.0
offset_bottom = 559.0
flat = true

[node name="message" type="Label" parent="."]
offset_left = 712.0
offset_top = 464.0
offset_right = 900.0
offset_bottom = 536.0
theme_override_font_sizes/font_size = 30

[node name="Timer" type="Timer" parent="."]

[node name="count" type="Label" parent="."]
offset_left = 720.0
offset_top = 150.0
offset_right = 829.0
offset_bottom = 186.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count2" type="Label" parent="."]
offset_left = 720.0
offset_top = 180.0
offset_right = 829.0
offset_bottom = 216.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count3" type="Label" parent="."]
offset_left = 720.0
offset_top = 210.0
offset_right = 829.0
offset_bottom = 246.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count4" type="Label" parent="."]
offset_left = 720.0
offset_top = 240.0
offset_right = 829.0
offset_bottom = 276.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count5" type="Label" parent="."]
offset_left = 720.0
offset_top = 270.0
offset_right = 829.0
offset_bottom = 306.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count6" type="Label" parent="."]
offset_left = 720.0
offset_top = 300.0
offset_right = 829.0
offset_bottom = 336.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count7" type="Label" parent="."]
offset_left = 720.0
offset_top = 330.0
offset_right = 829.0
offset_bottom = 366.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count8" type="Label" parent="."]
offset_left = 720.0
offset_top = 360.0
offset_right = 829.0
offset_bottom = 396.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count9" type="Label" parent="."]
offset_left = 720.0
offset_top = 390.0
offset_right = 829.0
offset_bottom = 426.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="count10" type="Label" parent="."]
offset_left = 720.0
offset_top = 420.0
offset_right = 829.0
offset_bottom = 456.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "bread top"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_jkjjf")
volume_db = -10.0
bus = &"SFX"

[connection signal="pressed" from="Button1_10" to="." method="_on_button_1_10_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="Button6" to="." method="_on_button_6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_button_7_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_button_8_pressed"]
[connection signal="pressed" from="Button9" to="." method="_on_button_9_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
